WIP: add language selector

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -598,7 +598,9 @@
     <string name="init_address">Show Address</string>
     <string name="init_summary_address">Show address instead of coordinates on main screen</string>
     <string name="init_useenglish">Use English</string>
-    <string name="init_summary_useenglish">Use English language for c:geo (Restart needed)</string>
+    <string name="init_summary_useenglish">Use English language for c:geo (restart required). Overrides the next setting.</string>
+    <string name="init_userlocale">Locale for translation</string>
+    <string name="init_summary_userlocale">Enter an ISO language identifier for app-specific language setting, e. g. \"de\" for German. Leave empty to use system setting. (Restart required)</string>
     <string name="init_category_exclude">Exclude caches</string>
     <string name="init_exclude">Exclude Own and Found</string>
     <string name="init_summary_exclude">Exclude caches you own or have found</string>
