--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1958,6 +1958,8 @@
     <string name="switch_manual">Manual</string>
     <string name="switch_auto">Automatic</string>
     <string name="switch_default">(default)</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
     <!-- view settings -->
     <string name="view_settings">View settings</string>
