--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2033,23 +2033,27 @@
     <string name="skip">Skip</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
-    <string name="advanced">Advanced</string>
     <string name="wizard_welcome_title">Welcome to c:geo</string>
     <string name="wizard_intro">It looks like this is the first time c:geo is used on this device. Shall I help you with configuration? It\'s just a few steps.</string>
-    <string name="wizard_outro">Thanks for configuring c:geo.\nHave fun!</string>
+    <string name="wizard_outro_ok">Thanks for configuring c:geo.\nHave fun!</string>
+    <string name="wizard_outro_error">Incomplete configuration\nNot all parts of c:geo will work as expected!</string>
     <string name="wizard_permissions_title">Set app permissions</string>
     <string name="wizard_permissions_intro">c:geo needs certain permissions to function correctly. I will explain them in the next steps.\nWithout these permissions you will not be able to use c:geo.</string>
     <string name="wizard_platforms_title">Configure platforms</string>
-    <string name="wizard_platforms_intro">To download caches you need an account for at least one of the geocaching platforms supported by c:geo.\nIn the next step you can optionally create an account for and setup the connection to geocaching.com.</string>
-    <string name="wizard_platforms_others">c:geo supports several other geocaching services like Opencaching-platforms, Extremcaching.com and Geocaching.su.\nPress the button below to configure those services.</string>
+    <string name="wizard_platforms_intro">To download caches you need an account for at least one of the geocaching platforms supported by c:geo</string>
+    <string name="wizard_platforms_gc">geocaching.com</string>
+    <string name="wizard_platforms_others">Opencaching &amp; more</string>
     <string name="wizard_welcome_advanced">Advanced configuration</string>
     <string name="wizard_advanced_offlinemaps_label">Offline maps</string>
     <string name="wizard_advanced_offlinemaps_info">c:geo can download map files for offline usage</string>
     <string name="wizard_advanced_brouter_label">Routing app</string>
     <string name="wizard_advanced_brouter_info">c:geo can navigate to targets and show routing info on your map by installing and configuring a companion app named \"BRouter Offline Navigation\"</string>
-    <string name="wizard_advanced_services_label">Geocaching services</string>
-    <string name="wizard_advanced_services_info">c:geo supports several geocaching services</string>
     <string name="wizard_advanced_restore_label">Restore</string>
     <string name="wizard_advanced_restore_info">Restore settings / data from a previous installation</string>
+    <string name="status_not_ok">ERROR</string>
+    <string name="wizard_status_title">Configuration status</string>
+    <string name="wizard_status_storage_permission">Storage permission</string>
+    <string name="wizard_status_location_permission">Location permission</string>
+    <string name="wizard_status_platform">Geocaching platforms</string>
 
 </resources>
