--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2019,6 +2019,7 @@
     <string name="previous">Previous</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
+    <string name="done">Done</string>
     <string name="finish">Finish</string>
     <string name="wizard_welcome_title">Welcome to c:geo</string>
     <string name="wizard_intro">It looks like this is the first time c:geo is used on this device. Shall I help you with configuration? It\'s just a few steps.</string>
