--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -408,6 +408,7 @@
     <string name="caches_sort_storage">Date stored on device</string>
     <string name="caches_sort_eventdate">Event date</string>
     <string name="caches_select_mode">Select mode</string>
+    <string name="caches_select_next">Select next 20 caches</string>
     <string name="caches_select_mode_exit">Exit select mode</string>
     <string name="caches_select_invert">Invert selection</string>
     <string name="caches_nearby">Nearby</string>
