--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -434,6 +434,7 @@
     <string name="caches_clear_offlinelogs">Clear offline logs</string>
     <string name="caches_clear_offlinelogs_message">Do you want to clear the offline logs?</string>
     <string name="caches_clear_offlinelogs_progress">Clearing offline logs</string>
+    <string name="caches_show_attributes">Show attribute overview</string>
     <string name="caches_set_cache_icon">Set cache icons</string>
     <string name="caches_reset_cache_icons_title">Reset cache icons</string>
     <string name="caches_make_list_unique">Make list unique</string>
