--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1690,6 +1690,7 @@
     <string name="helper_brouter_description">BRouter provides offline routing. If it is installed and has the necessary files downloaded, c:geo will automatically show a route to the cache on the internal map.</string>
     <string name="helper_chirpwolf_description">Chirp Wolf allows you to read the data from ANT+/Garmin chirp tags, which is needed for ANT+/chirp geocaches.</string>
     <string name="helper_alc_description">Adventure Lab Player app for your phone or tablet.</string>
+    <string name="helper_gcwizard_description">GC Wizard contains numerous tools for simple cryptography, geographic and scientific calculations as well as hundreds of sets of various symbols.</string>
 
     <!-- export -->
     <string name="share_export">Share / Export</string>
