--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1688,7 +1688,7 @@
     <string name="helper_where_you_go_description">WhereYouGo allows playing and searching geocaches of type Wherigo. c:geo can automatically trigger the download of cartridges within this app.</string>
     <string name="helper_chirpwolf_description">Chirp Wolf allows you to read the data from ANT+/Garmin chirp tags, which is needed for ANT+/chirp geocaches.</string>
     <string name="helper_alc_description">Adventure Lab Player app for your phone or tablet.</string>
-    <string name="helper_gcwizard_description">GC Wizard contains numerous tools for simple cryptography, geographic and scientific calculations as well as hundreds of sets of various symbols.</string>
+    <string name="helper_gcwizard_description">GC Wizard contains numerous tools for simple cryptography, geodetic and scientific calculations as well as hundreds of sets of various symbols.</string>
 
     <!-- export -->
     <string name="share_export">Share / Export</string>
