add offline stored counter to dashboard (fix #11936)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -458,6 +458,14 @@
         <item quantity="many">%d logged offline</item>
         <item quantity="other">%d logged offline</item>
     </plurals>
+    <plurals name="caches_stored_offline">
+        <item quantity="zero">%d caches stored</item>
+        <item quantity="one">%d cache stored</item>
+        <item quantity="two">%d caches stored</item>
+        <item quantity="few">%d caches stored</item>
+        <item quantity="many">%d caches stored</item>
+        <item quantity="other">%d caches stored</item>
+    </plurals>
 
     <!-- caches lists -->
     <string name="menu_lists">Manage lists</string>
