add category info for elevate theme options

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2339,6 +2339,7 @@
     <string name="mapserver_hylly_info">Detailed maps for Finland, require one of the \"Hylly\" map themes</string>
     <string name="mapserver_hylly_themes_info">Detailed map theme, built for \"Hylly\" maps</string>
     <string name="brouter_info">Offline routing service</string>
+    <string name="maptheme_elevate_categoryinfo">Relevant for: [A] Areas, [P] POI, [R] Routes, [W] Ways</string>
 
     <!-- history track -->
     <string name="map_clear_trailhistory">Clear history track</string>
