--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2331,6 +2331,9 @@
     <string name="downloadmap_checking_for_updates">Checking for updates…</string>
     <string name="downloadtile_title">Missing routing data</string>
     <string name="downloadtile_info">c:geo cannot calculate the requested route as there is some routing data file missing. Do you want to download missing routing data?</string>
+    <string name="check_tiles_menu">Check for missing routing data</string>
+    <string name="check_tiles_found">Routing data already present</string>
+    <string name="check_tiles_missing">Found missing routing data:\n%1$s\n\nDo you want to download those files?%2$s</string>
     <string name="tileupdate_info">Do you want to check for updates of downloaded routing data files?</string>
     <string name="mapupdate_info">Do you want to check for updates of map and theme files?</string>
     <string name="no_updates_found">No updates found</string>
