--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -2001,7 +2001,7 @@
     <string name="cat_location">Cache location</string>
     <string name="cat_duration">Distance / Duration</string>
     <string name="cat_surrounding">Around the cache</string>
-    <string name="cat_transport">Transport</string>
+    <string name="cat_permissions">Permissions</string>
 
     <!-- next things -->
     <string name="quote">To make geocaching easier, to make users lazier.</string>
