--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1998,12 +1998,17 @@
     <string name="attribute_unknown">Unknown attribute</string>
 
     <!-- cache attribute categories -->
-    <string name="cat_tools">Tools required</string>
+    <string name="cat_tools">Equipment</string>
     <string name="cat_type">Type</string>
     <string name="cat_location">Cache location</string>
     <string name="cat_duration">Distance / Duration</string>
     <string name="cat_surrounding">Around the cache</string>
     <string name="cat_permissions">Permissions</string>
+
+    <!-- cache attribute sources -->
+    <string name="attribute_source_all">All</string>
+    <string name="attribute_source_gc">GC</string>
+    <string name="attribute_source_oc">OC</string>
 
     <!-- next things -->
     <string name="quote">To make geocaching easier, to make users lazier.</string>
